--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm run seed | npm run server",
+    "seed": "node ./models/seed/productSeeder",
+    "server": "node ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
